force-app/main/default/objects/Titulo__c/Titulo__c.object-meta.xml
<CustomObject>
    <label>Título</label>
    <nameField>
        <label>Número do Título</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Títulos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>