force-app/main/default/objects/Titulo__c/fields/Atraso__c.field-meta.xml
<CustomField>
    <fullName>Atraso__c</fullName>
    <label>Atraso</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>