force-app/main/default/objects/Titulo__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <length>140</length>
    <type>Text</type>
</CustomField>