force-app/main/default/objects/Titulo__c/fields/CodigoConta__c.field-meta.xml
<CustomField>
    <fullName>CodigoConta__c</fullName>
    <label>Código da Conta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>