force-app/main/default/objects/Titulo__c/fields/ComissaoGerenteP__c.field-meta.xml
<CustomField>
    <fullName>ComissaoGerenteP__c</fullName>
    <label>Comissão Gerente (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>