force-app/main/default/objects/Titulo__c/fields/ComissaoGerenteV__c.field-meta.xml
<CustomField>
    <fullName>ComissaoGerenteV__c</fullName>
    <label>Comissão Gerente (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>