force-app/main/default/objects/Titulo__c/fields/ComissaoVendedorP__c.field-meta.xml
<CustomField>
    <fullName>ComissaoVendedorP__c</fullName>
    <label>Comissão Vendedor (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>