force-app/main/default/objects/Titulo__c/fields/ComissaoVendedorV__c.field-meta.xml
<CustomField>
    <fullName>ComissaoVendedorV__c</fullName>
    <label>Comissão Vendedor (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>