force-app/main/default/objects/Titulo__c/fields/DataEmissao__c.field-meta.xml
<CustomField>
    <fullName>DataEmissao__c</fullName>
    <label>Data da Emissão</label>
    <type>Date</type>
</CustomField>