force-app/main/default/objects/Titulo__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <length>140</length>
    <type>Text</type>
</CustomField>