force-app/main/default/objects/Titulo__c/fields/Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Faturamento__c</fullName>
    <label>Faturamento</label>
    <referenceTo>Faturamento__c</referenceTo>
    <relationshipLabel>Títulos</relationshipLabel>
    <relationshipName>Titulos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>