force-app/main/default/objects/Titulo__c/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <label>Gerente</label>
    <length>140</length>
    <type>Text</type>
</CustomField>