force-app/main/default/objects/Titulo__c/fields/Multa_Juros__c.field-meta.xml
<CustomField>
    <fullName>Multa_Juros__c</fullName>
    <label>Multa/Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>