force-app/main/default/objects/Titulo__c/fields/NomeCliente__c.field-meta.xml
<CustomField>
    <fullName>NomeCliente__c</fullName>
    <label>Nome do Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>