force-app/main/default/objects/Titulo__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Títulos</relationshipLabel>
    <relationshipName>T_tulos</relationshipName>
    <type>Lookup</type>
</CustomField>