force-app/main/default/objects/Titulo__c/fields/Subserie_da_Nota_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Subserie_da_Nota_Fiscal__c</fullName>
    <label>Subsérie da Nota Fiscal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>