force-app/main/default/objects/Titulo__c/fields/Titulo__c.field-meta.xml
<CustomField>
    <fullName>Titulo__c</fullName>
    <label>Titulo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>