force-app/main/default/objects/Titulo__c/fields/Utilizacao__c.field-meta.xml
<CustomField>
    <fullName>Utilizacao__c</fullName>
    <label>Utilização</label>
    <length>140</length>
    <type>Text</type>
</CustomField>