force-app/main/default/objects/Titulo__c/fields/Valor_do_Titulo__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Titulo__c</fullName>
    <label>Valor do Título</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>