force-app/main/default/objects/Titulo__c/fields/Valor_Liquido__c.field-meta.xml
<CustomField>
    <fullName>Valor_Liquido__c</fullName>
    <label>Valor Líquido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>