force-app/main/default/objects/Titulo__c/fields/Valor_Pago__c.field-meta.xml
<CustomField>
    <fullName>Valor_Pago__c</fullName>
    <label>Valor Pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>