force-app/main/default/objects/Titulo__c/fields/Valor_Total_do_Imposto_Retido__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_do_Imposto_Retido__c</fullName>
    <label>Valor Total do Imposto Retido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>