force-app/main/default/objects/Titulo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_de_Vencimento__c</columns>
    <columns>Faturamento__c</columns>
    <columns>Parcela__c</columns>
    <columns>Valor_do_Titulo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>